# internal/handlers/user.go
@@ -6,8 +6,10 @@ import (
 	"computer-club/internal/usecase"
 	"computer-club/pkg/errors"
 	"encoding/json"
+	"github.com/go-chi/chi/v5"
 	"github.com/sirupsen/logrus"
 	"net/http"
+	"strconv"
 )
 
 type UserHandler interface {
@@ -15,6 +17,7 @@ type UserHandler interface {
 	LoginUser(w http.ResponseWriter, r *http.Request)
 	InfoUser(w http.ResponseWriter, r *http.Request)
 	GetUsers(w http.ResponseWriter, r *http.Request)
+	GetUserByID(w http.ResponseWriter, r *http.Request)
 }
 
 type userHandler struct {
@@ -205,7 +208,9 @@ func (h userHandler) LoginUser(w http.ResponseWriter, r *http.Request) {
 // @Description      Получение списка пользователей (может только админ)
 // @Tags 		users
 // @Produce      json
+// @Security     BearerAuth
 // @Success 	 200 {object} []models.User "Список пользователей успешно показан"
+// @Failure		 403 {object} string "Недостаточно прав"
 // @Failure		 404 {object} string "Список пользователей пуст"
 // @Failure      500 {object} string "Внутренняя ошибка сервера"
 // @Router 		/users [get]
@@ -237,6 +242,54 @@ func (h userHandler) GetUsers(w http.ResponseWriter, r *http.Request) {
 
 	w.WriteHeader(http.StatusOK)
 	if err := json.NewEncoder(w).Encode(users); err != nil {
+		h.log.WithError(err).Error("Ошибка при кодировании ответа JSON")
+		middleware.WriteError(w, http.StatusInternalServerError, errors.ErrCodingaData.Error())
+	}
+}
+
+// GetUserByID
+// @Summary  		Получение пользователя по ID
+// @Description      Получение пользователя по ID (может только админ)
+// @Tags 		 users
+// @Produce      json
+// @Security     BearerAuth
+// @Success 	 200 {object} models.User "Пользователь успешно показан"
+// @Failure 	 400 {object} string "Некорректный id"
+// @Failure		 403 {object} string "Недостаточно прав"
+// @Failure		 404 {object} string "Пользователь не найден"
+// @Failure      500 {object} string "Внутренняя ошибка сервера"
+// @Router 		/users/{id} [get]
+func (h userHandler) GetUserByID(w http.ResponseWriter, r *http.Request) {
+	ctx := r.Context()
+
+	role, ok := r.Context().Value("role").(string)
+	if !ok || role != "admin" {
+		h.log.WithError(errors.ErrForbidden).Error("Ошибка при получении списка пользователей: недостаточно прав")
+		middleware.WriteError(w, http.StatusForbidden, errors.ErrForbidden.Error())
+		return
+	}
+
+	idStr := chi.URLParam(r, "id")
+
+	id, err := strconv.ParseInt(idStr, 10, 64)
+	if err != nil {
+		h.log.WithError(err).Error("Некорректный ID пользователя")
+		middleware.WriteError(w, http.StatusBadRequest, errors.ErrInvalidUserID.Error())
+		return
+	}
+
+	h.log.Info("Запрос на получение пользователя по id")
+	user, err := h.userService.GetUserByID(ctx, id)
+	if err != nil {
+		h.log.WithError(err).Error("Ошибка при поиске пользователя по ID")
+		middleware.WriteError(w, http.StatusNotFound, errors.ErrFindUsers.Error())
+		return
+	}
+
+	w.Header().Set("Content-Type", "application/json")
+	w.WriteHeader(http.StatusOK)
+
+	if err := json.NewEncoder(w).Encode(user); err != nil {
 		h.log.WithError(err).Error("Ошибка при кодировании ответа JSON")
 		middleware.WriteError(w, http.StatusInternalServerError, errors.ErrCodingaData.Error())
 	}
